group 'io.github.morichan'
version '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'io.github.morichan.retuss.retuss.RetussWindow'

sourceCompatibility = 9
tasks.withType(AbstractCompile)*.options*.encoding =
        tasks.withType(GroovyCompile)*.groovyOptions*.encoding =
                javadoc.options.encoding =
                        javadoc.options.charSet = 'UTF-8'

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.+'
    }
}



jar.manifest.attributes 'Main-Class': 'io.github.morichan.retuss.retuss.RetussWindow'

repositories {
    mavenCentral()
}

apply plugin: 'org.junit.platform.gradle.plugin'
apply plugin: 'antlr'

dependencies {
    antlr 'org.antlr:antlr4:4+'

    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0-M1'
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.0-M1'
    testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.0-M1' // parameterized tests
    testCompile 'org.jmockit:jmockit:1.38'
    testCompile 'org.assertj:assertj-core:3.10.0'
    testCompile 'net.java.quickcheck:quickcheck:0.6'
    testCompile 'org.testfx:testfx-junit5:4.0.13-alpha'

    testCompileOnly 'org.apiguardian:apiguardian-api:1.0.0'
}

ext.antlr = [destinationDir: 'src/main/java/io/github/morichan/retuss/parser/java']
generateGrammarSource {
    outputDirectory = file(new File("${antlr.destinationDir}"))
    arguments = ["-package", "io.github.morichan.retuss.parser.java", "-listener", "-no-visitor"].flatten()
}

clean {
    delete antlr.destinationDir
}

if (gradle.startParameter.taskNames.contains('uploadArchives')) {
    apply from: 'build.publish.gradle'
}



task javadocJar(type: Jar) {
    classifier = 'javadoc'
    from javadoc
}
task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}
artifacts {
    archives javadocJar, sourcesJar
}



junitPlatformTest {
    jvmArgs "-Djdk.attach.allowAttachSelf"
}

test {
    systemProperties 'property': 'value'
}

junitPlatform.enableStandardTestTask true

apply plugin: 'jacoco'
jacoco {
    toolVersion = '0.+'
    applyTo junitPlatformTest
}

junitPlatformTest {
    jacoco {
        destinationFile = file("${buildDir}/jacoco/test.exec")
    }
}



jacocoTestReport {
    afterEvaluate {
        classDirectories = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/Main*'])
        })
    }
    reports {
        xml.enabled = true
        csv.enabled = false
        html.enabled = true
    }
}